--- a/web/assets/scss/layouts/_admin-wrapper.scss
+++ b/web/assets/scss/layouts/_admin-wrapper.scss
@@ -1,5 +1,7 @@
 #admin-wrapper {
   @media #{$desktop} {
+    padding-top: 60px;
+    padding-bottom: 40px;
     display: flex;
     align-items: center;
     min-height: calc(100vh - 230px);
