--- a/web/assets/scss/sections/AdminBundle/_index-back-end.scss
+++ b/web/assets/scss/sections/AdminBundle/_index-back-end.scss
@@ -27,7 +27,6 @@
   @media #{$tablet} {
     margin-top: 30px;
     padding-top: 30px;
-    border-top: 1px solid #aaa;
     display: flex;
     flex-wrap: wrap;
   }
